<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/id_start"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_choose_lyric" />

    <Button
        android:id="@+id/id_choose_music"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginBottom="32dp"
        android:text="@string/text_choose_music"
        app:layout_constraintBottom_toTopOf="@+id/id_choose_lyric"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/id_choose_lyric"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:text="@string/text_choose_lyric"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/id_guidance_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/text_guidance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/id_input_button"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:text="@string/text_input_lyric_manual"
        app:layout_constraintBottom_toTopOf="@+id/id_start"
        app:layout_constraintEnd_toStartOf="@+id/id_choose_lyric"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_choose_music"
        app:layout_constraintVertical_bias="0.484" />

</androidx.constraintlayout.widget.ConstraintLayout>